--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "main-project",
   "private": true,
+  "homepage": "https://jueun07.github.io/Fruit_Board",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "gh-pages -d dist",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
